<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/recipe_list_thumb"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/thumb_nail"/>

    <RelativeLayout
        android:id="@+id/recipe_list_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/recipe_list_thumb">

        <TextView
            android:id="@+id/recipe_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="18sp"
            android:text="@string/recipe_name" />

        <TextView
            android:id="@+id/recipe_list_serving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_list_title"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:maxLines="2"
            android:textSize="16sp"
            android:text="@string/serving" />

        <TextView
            android:id="@+id/recipe_list_prep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_list_title"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="120dp"
            android:maxLines="2"
            android:textSize="16sp"
            android:text="@string/prep" />

        <ImageButton
            android:id="@+id/cook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_list_title"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            app:srcCompat="@android:drawable/ic_input_get" />
    </RelativeLayout>


</RelativeLayout>